# kanpai-pos

./: .env.example  .gitignore  README.md  alembic.ini  alembic.ini.bak  pyproject.toml  tmp_open_cash_shift.json  tmp_open_ticket.json
airtable/: README.md
alembic/: env.py
app/: main.py
config/: print_profile.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build_kanpai_api_sidecar.ps1  build_print_worker_exe.ps1  check_pre_sync_invariants.py  deactivate_demo_catalog.py  install_print_worker_task.ps1  kanpai_api_entrypoint.py  prepare_production_database.py  preview_print_formats.py  preview_print_formats_from_db.py  preview_print_station_documents.py  print_worker_config.example.json  print_worker_config.usb-direct.example.json  print_worker_windows.py  reconcile_table_status_cache.py  reset_operational_data.py  reset_seed_catalog_data.py  run_print_worker_windows.ps1  smoke_local_backend.ps1  uninstall_print_worker_task.ps1
tests/: auth_helpers.py  conftest.py  test_airtable_production_reset.py  test_airtable_seed_pipeline.py  test_airtable_sync_scheduler.py  test_airtable_to_sqlite_pull.py  test_api_v1.py  test_audit_query.py  test_cancellation.py  test_cash_shift_close.py  test_cash_shift_close_blockers.py  test_discount_presets.py  test_health.py  test_inventory.py  test_models_metadata.py  test_operational_reset.py  test_order.py  test_payment.py  test_phase3m.py  test_phase3n.py  test_pos.py  test_pre_sync_invariants.py  test_preflight.py  test_print_formatters.py  test_print_profile.py  test_print_queue.py  (+9 more)
(+455 files in other folders)
