[project]
name = "kanpai-pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CuauhtliRojas", email = "92224858+CuauhtliRojas@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.2",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[project.scripts]
kanpai-pos = "kanpai_pos:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
